fixing widths and paddings when content overflows

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -473,10 +473,8 @@ body {
 .subscription-form__button {
   font-family: "PT Sans", sans-serif;
 
-  padding: 0;
+  padding: 15px 32px 15px 33px;
 
-  min-width: 200px;
-  min-height: 60px;
 
   border-radius: 0 10px 10px 0;
   border-color: transparent;
@@ -601,8 +599,9 @@ body {
   min-height: 408px;
   color: #ffffff;
   background-image: url("../images/content/catalog-background.jpg");
-  background-size: 100% auto;
+  background-size: 100% 100%;
   background-repeat: no-repeat;
+  background-color: #5f9ea0;
 
   margin-bottom: 44px;
   margin-top: -6px;
@@ -980,10 +979,14 @@ body {
 
 .catalog-filter__accept-button {
   font-family: "PT Sans", sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: uppercase;
+
+  padding: 11px 33px 13px 33px;
 
   display: flex;
-  width: 160px;
-  height: 48px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -993,11 +996,6 @@ body {
   background-color: #83b3d3;
   border-radius: 4px;
   border-color: transparent;
-
-  font-size: 16px;
-  font-weight: 700;
-  line-height: normal;
-  text-transform: uppercase;
 
   cursor: pointer;
   margin-bottom: 11px;
@@ -1028,7 +1026,7 @@ body {
   text-align: center;
   font-size: 18px;
   line-height: normal;
-  padding: 8px 0px 8px 0;
+  padding: 8px 8px 8px 8px;
 
   cursor: pointer;
 }
@@ -1079,6 +1077,7 @@ body {
 }
 
 .search-results-sort {
+  max-width: 300px;
   font-family: "PT Sans", sans-serif;
   appearance: none;
   background-image: url("/images/icons/dropdown.svg");
@@ -1154,7 +1153,7 @@ body {
 .product-card {
   display: grid;
   grid-template-columns: 140px 19px 141px;
-  grid-template-rows: 6fr auto auto 1.08fr auto;
+  grid-template-rows: min-content auto auto 1.08fr auto;
   grid-template-areas:
     "image image image"
     "title title title"
@@ -1191,7 +1190,7 @@ body {
 .product-card__details-button {
   grid-area: details-button;
 
-  min-width: 133px;
+  padding: 5px 21px 5px 21px;
   justify-self: start;
 
   font-family: "PT Sans", sans-serif;
@@ -1222,6 +1221,7 @@ body {
 }
 
 .product-card__favorite-button {
+  padding: 7px 5px 6px 5px;
   grid-area: favorite-button;
 
   font-family: "PT Sans", sans-serif;
@@ -1339,7 +1339,7 @@ body {
   font-family: "PT Sans", sans-serif;
 
   width: 620px;
-  padding: 15px 0;
+  padding: 15px 15px;
 
   color: #ffffff;
   border-radius: 4px;
@@ -1454,6 +1454,7 @@ body {
 }
 
 .hotels-view-number {
+  max-width: 200px;
   font-family: "PT Sans", sans-serif;
   font-size: 18px;
   line-height: normal;
